--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^13.9.8",
     "@types/react": "^16.9.29",
     "@types/react-dom": "^16.9.5",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.3"
   },
