--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^13.9.8",
     "@types/react": "^16.9.29",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
     "@types/recharts": "^1.8.9",
     "axios": "^0.19.2",
     "react": "^16.13.1",
