--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/recharts": "^1.8.9",
     "axios": "^0.19.2",
+    "i18next": "^19.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.3.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
